--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Vegas 2026</title>
+    <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
-    
+
+    <div class="logo">
+        <img src="Styles/assets/VegasIcon.svg" alt="VegasSkyline">
+    </div>
 </body>
 </html>
