--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 
     <div class="logo">
-        <img src="Styles/assets/VegasIcon.svg" alt="VegasSkyline">
+        <img src="Styles/assets/VegasIcon.svg" alt="Vegas Skyline">
+        <img src="Styles/assets/Enter.svg" alt="Enter Site" id="enter">
     </div>
 </body>
 </html>
