--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="logo">
-        <img src="Styles/assets/VegasIcon.svg" alt="Vegas Skyline">
+        <img src="Styles/assets/VegasIcon1.svg" alt="Vegas Skyline">
         <img src="Styles/assets/Enter.svg" alt="Enter Site" id="enter">
     </div>
 </body>
