--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
     </ul>
   </div>
 </nav>
-<body>
+
+
+<body class="modal-overlay" id="modal-overlay">
+
+
 
     <div class="logo">
         <img src="Styles/assets/VegasIcon1.svg" alt="Vegas Skyline">
