--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     A fake / hidden checkbox is used as click reciever,
     so you can use the :checked selector on it.
     -->
-    <input type="checkbox" id="menuCheckbox" id="hamburger"/>
+    <input type="checkbox" id="menuCheckbox" class="hamburger"/>
     
     <!--
     Some spans to act as a hamburger.
@@ -55,7 +55,7 @@
 </nav>
 
 
-<body id=" mainContainer">
+<body id="mainContainer">
 
 
 
