--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <span></span>
   
     
-    <ul id="menu" class="mainContainer">
+    <ul id="menu" >
       <!-- 
       We can use a label here to close upon click (when doing same page navigation), this
       does require a slight bit of JS.
@@ -55,7 +55,7 @@
 </nav>
 
 
-<body >
+<body class="mainContainer" >
 
 
 
