--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 
 <nav role="navigation">
-    <div id="menuToggle">
+    <div id="menuToggle" class="hamburger">
 
           <!--
     A fake / hidden checkbox is used as click reciever,
     so you can use the :checked selector on it.
     -->
-    <input type="checkbox" id="menuCheckbox" class="hamburger"/>
+    <input type="checkbox" id="menuCheckbox" />
     
     <!--
     Some spans to act as a hamburger.
