--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
 </nav>
 
 
-<body class="mainContainer" >
+<body >
 
 
-
+  <main class="mainContainer" >
     <div class="logo">
         <img src="Styles/assets/VegasIcon1.svg" alt="Vegas Skyline">
         <img src="Styles/assets/Enter.svg" alt="Enter Site" id="enter">
     </div>
+  </main>
 </body>
 </html>
