--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
 
-<nav role="navigation">
+<nav role="navigation" class="menu">
     <div id="menuToggle" class="hamburger">
 
           <!--
@@ -55,14 +55,12 @@
 </nav>
 
 
-<body >
+<body class="mainContainer"  >
 
 
-  <main class="mainContainer" >
     <div class="logo">
         <img src="Styles/assets/VegasIcon1.svg" alt="Vegas Skyline">
         <img src="Styles/assets/Enter.svg" alt="Enter Site" id="enter">
     </div>
-  </main>
 </body>
 </html>
