--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vegas 2026</title>
     <link rel="stylesheet" href="Styles/styles.css">
+     <script src="scripts.js"></script>
 </head>
 
 <nav role="navigation" class="menu">
